<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Actify</string>
    
    <string name="tabActivity">Activities</string>
    <string name="tabGuest">Guests</string>
    <string name="tabActivityHistory">Activity Log</string>
    <string name="tabGuestHistory">Guest List</string>
    <string name="tabActivityChart">Daily Chart</string>
    <string name="tabActivityDensity">Weekly Chart</string>
    
    
    <string name="txtUsername">Username</string>
    <string name="txtPassword">Password</string>
    <string name="btnLogin">Login</string>
    
    <string name="menuLogout">Logout</string>
    <string name="menuHome">Home</string>
    <string name="menuSettings">Settings</string>
    
    <string name="itemLocation">Location</string>
    <string name="itemVisibility">Visibility</string>
    <string name="itemOrder">Order</string>
    <string name="itemReminder">Reminder</string>

    <string name="headerLocationDefault">Default locations</string>
    <string name="msgLocationDefault">Choose the default location for each activity</string>
    
    <string name="btnOk">OK</string>
    <string name="btnCancel">Cancel</string>
    <string name="btnYes">Yes</string>
    <string name="btnNo">No</string>
    
    <string name="btnStop">STOP</string>
    <string name="btnPause">PAUSE</string>
    <string name="btnResume">RESUME</string>
    
    <string name="toastActivitySaved">" activity is now saved"</string>
    <string name="toastActivityNoPauses">"This activity has never been paused or resumed"</string>    
    <string name="editActivityTitleDialog">Edit activity</string>
    <string name="editActivityLabelActivity">Activity</string>
	<string name="editActivityLabelLocation">Performed in</string>
	<string name="editActivityLabelStartTime">Started at</string>
	<string name="editActivityLabelEndTime">Ended at</string>
	<string name="editActivityLabelReminder">Reminder in</string>
	<string name="editActivityLabelDetails">Additional details</string>
	<string name="editActivityBtnPause">Pauses</string>
	<string name="editActivityBtnGuest">Guests</string>
	<string name="editActivityHeaderStartTime">Change starting time</string>
	<string name="editActivityHeaderEndTime">Change ending time</string>	
	<string name="editPauseDeleteMsg">"Are you sure you want to delete this data?\n"</string>
	<string name="editActivityToastNoGuest">"There is no guest at the moment"</string>
	<string name="editActivityHistoryToastNoGuest">"There was no guest visit when you did this activity"</string>
	<string name="editActivityTitleGuest">"Add guests"</string>
	<string name="editActivityMsgGuest">"Add visiting guests who are doing this activity with you"</string>
	<string name="editActivityMsgHistoryGuest">"Add visiting guests who were doing this activity with you"</string>
	<string name="editActivityTitlePauses">"Edit pauses and resumes"</string>
	<string name="editActivityBtnDelete">Delete this activity</string>
	<string name="editActivityDeleteMsg">"Are you sure you want to delete this activity?"</string>
	<string name="gmailAccount">Your GMail account for sending email</string>
	<string name="gmail">"@gmail.com"</string>
	<string name="btnGoodbye">SAY GOODBYE</string>
	<string name="toastGuestSaved">"'s visit is now saved"</string>
	<string name="editGuestTitleDialog">"Edit guest's visit"</string>
	<string name="editGuestLabelName">Name</string>
	<string name="editGuestLabelStartTime">Came at</string>
	<string name="editGuestLabelEndTime">Said goodbye at</string>
	<string name="editGuestDeleteMsg">"Are you sure you want to delete this guest's visit?"</string>
	<string name="editGuestBtnDelete">Delete this visit</string>
	
	<string name="datetimePickerHeader">Change time and date</string>
    
    <string name="start_time">00:00:00</string>
    <string name="time_label">HOURS	MINUTES	SECONDS</string>
    <string name="activity">Activity</string>
    
    
    <string name="btnStart">Start a new activity</string>     
    
    <string name="txtLocation">"in the "</string>
    <string name="txtGuests">"with "</string>
    
  
    <string name="save">Save default locations</string>
	<string name="change_location">Tap the timer to change your location</string>
	<string name="add">Add a guest</string>
	<string name="guest_empty">The name cannot be empty</string>
	
	
	<string name="paused">" [PAUSED]"</string>
	
    <string name="reset_button">Reset</string>
    
    <string name="check_date_now">The date and time cannot be later than now</string>
    
    <string name="btnShow">Show</string>
    <string name="btnHide">Hide</string>
	
</resources>