<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">
       
	<!-- Login Form -->
    <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingLeft="15dp"
         android:paddingRight="15dp">
         <ImageView
			android:id="@+id/logo"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:padding="20dip"
			android:gravity="center"
			android:contentDescription="@string/app_name"
			android:src="@drawable/logo" />
         <EditText
             android:id = "@+id/txtUsername" 
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dip"
             android:paddingLeft="20dip"
             android:singleLine="true"
             android:hint="@string/txtUsername"
             android:inputType="text"/>
         <EditText
             android:id = "@+id/txtPassword"  
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:paddingLeft="20dip"
             android:singleLine="true"
             android:hint="@string/txtPassword"
             android:inputType="textPassword"/>
         <!-- Login button -->
         <Button 
             android:id="@+id/btnLogin"             
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:paddingLeft="20dip"
             android:layout_marginTop="5dip"
             android:textStyle="bold"
             android:textSize="16sp"
             android:textColor="@color/btnTextColor"
             android:text="@string/btnLogin"
             android:background="@drawable/button_selector_round"/>

	</LinearLayout>
    <!-- Login Form Ends -->
    
</ScrollView >