<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
   	android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical" >
		<TextView
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:singleLine="false"
	        android:layout_marginLeft="10dp"
	        android:layout_marginTop="5dp"
	        android:gravity="left|center_vertical"
	        android:textSize="18sp"
	        android:text="@string/gmailAccount"/>	    
	    <RelativeLayout
	    	android:layout_width="match_parent"
	   	 	android:layout_height="match_parent"
	    	android:layout_margin="5dp" >
	    	<TextView
		        android:id="@+id/lbl"
		        android:layout_width="wrap_content"
		        android:layout_height="match_parent"		        
		        android:layout_alignBaseline="@+id/txtUsername"
		        android:layout_alignBottom="@+id/txtUsername"
		        android:layout_alignParentRight="true"
		        android:gravity="left|bottom"
		        android:text="@string/gmail"
		        android:textSize="18sp" />
 	    	<EditText
	             android:id = "@+id/txtUsername" 
	             android:layout_width="match_parent"
	             android:layout_height="match_parent"	
	             android:layout_toLeftOf="@id/lbl"             
	             android:paddingLeft="20dip"
	             android:singleLine="true"
	             android:hint="@string/txtUsername"
	             android:inputType="text"/>
		</RelativeLayout>
	    <EditText
             android:id = "@+id/txtPassword"  
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
             android:paddingLeft="20dip"
             android:singleLine="true"
             android:hint="@string/txtPassword"
             android:inputType="textPassword"/>	    
	</LinearLayout>
</ScrollView>