<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
   	android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical" >
	    <TextView
	        android:layout_height="wrap_content"
	        android:layout_width="match_parent"
	        android:singleLine="false"        
	        android:layout_marginLeft="10dp"
	        android:layout_marginTop="10dp"
	        android:textSize="18sp"
	        android:gravity="left|center_vertical"
	        android:text="@string/editActivityLabelActivity"/>
	    <Spinner
	        android:id="@+id/spinnerActivity"
	        android:layout_height="50dp"
	        android:layout_width="match_parent"
	        android:layout_marginLeft="10dp"
	        android:layout_marginRight="10dp"
	        android:gravity="left" />
	    <TextView
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:singleLine="false"
	        android:layout_marginLeft="10dp"
	        android:layout_marginTop="5dp"
	        android:gravity="left|center_vertical"
	        android:textSize="18sp"
	        android:text="@string/editActivityLabelLocation"/>
	    <Spinner
	        android:id="@+id/spinnerLocation"
	        android:layout_width="match_parent"
	        android:layout_height="50dp"
	        android:layout_marginLeft="10dp"
	        android:layout_marginRight="10dp"
	        android:gravity="left" />
	    <TextView
	        android:layout_height="wrap_content"
	        android:layout_width="match_parent"
	        android:singleLine="false"        
	        android:layout_marginLeft="10dp"
	        android:layout_marginTop="10dp"
	        android:textSize="18sp"
	        android:gravity="left|center_vertical"
	        android:text="@string/editActivityLabelStartTime"/>
	   	 <Button
	        android:id="@+id/btnStart"   
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
			android:layout_marginLeft="10dp"
	        android:layout_marginRight="10dp"
			android:padding="7dp"	
	        android:background="@drawable/button_selector_round_small"
	        android:drawableLeft="@drawable/clock"
	        android:gravity="left|center_vertical"
	        android:textSize="14sp"
	        style="@style/ButtonText"/>
	   	 <TextView
	        android:layout_height="wrap_content"
	        android:layout_width="match_parent"
	        android:singleLine="false"        
	        android:layout_marginLeft="10dp"
	        android:layout_marginTop="10dp"
	        android:textSize="18sp"
	        android:gravity="left|center_vertical"
	        android:text="@string/editActivityLabelEndTime"/>
	   	 <Button
	        android:id="@+id/btnEnd"   
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
			android:layout_marginLeft="10dp"
	        android:layout_marginRight="10dp"
			android:padding="7dp"	
	        android:background="@drawable/button_selector_round_small"
	        android:drawableLeft="@drawable/timer"
	        android:gravity="left|center_vertical"
	        android:textSize="14sp"
	        style="@style/ButtonText"/>
	   	<TextView
	        android:layout_height="wrap_content"
	        android:layout_width="match_parent"
	        android:singleLine="false"        
	        android:layout_marginLeft="10dp"
	        android:layout_marginTop="10dp"
	        android:textSize="18sp"
	        android:gravity="left|center_vertical"
	        android:text="@string/editActivityLabelDetails"/>
	   	<LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal"
		    android:layout_marginLeft="10dp"
		    android:layout_marginRight="10dp"
		    android:layout_marginBottom="10dp"	 >
		    <Button
		        android:id="@+id/btnPauses"   
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_weight="0.5"				
		        android:layout_marginRight="5dp"		        	
				android:padding="7dp"	
		        android:background="@drawable/button_selector_round_small"
		        android:drawableLeft="@drawable/pauses"
		        android:gravity="left|center_vertical"
		        android:text="@string/editActivityBtnPause"
		        android:textSize="14sp"
		        style="@style/ButtonText"/>
		    <Button
		        android:id="@+id/btnGuests"   
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_weight="0.5"
		        android:layout_marginLeft="5dp"
		        android:padding="7dp"
		        android:background="@drawable/button_selector_round_small"
		        android:drawableLeft="@drawable/guests"
		        android:gravity="left|center_vertical"
		        android:text="@string/editActivityBtnGuest"
		        android:textSize="14sp"
		        style="@style/ButtonText"/>
	    </LinearLayout>	    
	</LinearLayout>
</ScrollView>