<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
   	android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/row_selector" >
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical" >
	    <TextView
	        android:layout_height="wrap_content"
	        android:layout_width="match_parent"
	        android:singleLine="false"        
	        android:layout_marginLeft="10dp"
	        android:layout_marginTop="10dp"
	        android:textSize="18sp"
	        android:gravity="left|center_vertical"
	        android:text="@string/editGuestLabelName"/>
	    <EditText
	        android:id="@+id/editName"
	        android:layout_height="wrap_content"
	        android:layout_width="match_parent"
	        android:singleLine="false"        
	        android:layout_marginLeft="10dp"
	        android:layout_marginRight="10dp"
	        android:gravity="left|center_vertical"
	        android:inputType="text"/>
	    <TextView
	        android:layout_height="wrap_content"
	        android:layout_width="match_parent"
	        android:singleLine="false"        
	        android:layout_marginLeft="10dp"
	        android:layout_marginTop="10dp"
	        android:textSize="18sp"
	        android:gravity="left|center_vertical"
	        android:text="@string/editGuestLabelStartTime"/>
	   	 <Button
	        android:id="@+id/btnStart"   
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
			android:layout_marginLeft="10dp"
	        android:layout_marginRight="10dp"
	        android:layout_marginBottom="10dp"
			android:padding="7dp"	
	        android:background="@drawable/button_selector_round_small"
	        android:drawableLeft="@drawable/timer"
	        android:gravity="left|center_vertical"
	        android:textSize="14sp"
	        style="@style/ButtonText"/>
	   	 <TextView
	        android:layout_height="wrap_content"
	        android:layout_width="match_parent"
	        android:singleLine="false"        
	        android:layout_marginLeft="10dp"
	        android:layout_marginTop="10dp"
	        android:textSize="18sp"
	        android:gravity="left|center_vertical"
	        android:text="@string/editGuestLabelEndTime"/>
	   	 <Button
	        android:id="@+id/btnEnd"   
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
			android:layout_marginLeft="10dp"
	        android:layout_marginRight="10dp"
	        android:layout_marginBottom="10dp"
			android:padding="7dp"	
	        android:background="@drawable/button_selector_round_small"
	        android:drawableLeft="@drawable/timer"
	        android:gravity="left|center_vertical"
	        android:textSize="14sp"
	        style="@style/ButtonText"/>
	</LinearLayout>
</ScrollView>